DF-34226 | Fixed ISI menu overlapping #1

--- a/projects/veeva-clm/src/Components/03-organisms/SlideMenu/SlideMenu.scss
+++ b/projects/veeva-clm/src/Components/03-organisms/SlideMenu/SlideMenu.scss
@@ -10,7 +10,7 @@
   transition: .5s;
   z-index: 5;
   // IOS 16 z-index fix https://stackoverflow.com/questions/74082236/z-index-not-working-in-safari-iphone-with-ios16
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,1px);
 
   &.open {
     width: 200px;
